fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,16 @@
   height: 100vh;
 }
 
+/* Jank Select to make nav white */
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+  background: white !important;
+}
+
 /*Home*/
 .bounce {
   animation-name: bounce;
-  animation-duration: 2s;
+  animation-duration: 1.5s;
   animation-fill-mode: both;
 }
 
@@ -27,7 +33,7 @@
   }
 }
 
-/*NavBar */
+/* NavBar */
 
 .navbar {
   width: 25%;
